--- a/packages/csv2xbrl-cli/package.json
+++ b/packages/csv2xbrl-cli/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "echo \"No tests implemented\" && exit 0",
         "build": "tsup src/index.ts --clean --minify"
     },
     "keywords": [],
