--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,8 @@ jobs:
         - run: npm ci
         - run: npx lerna run build
         - run: npx lerna run test
-        - uses: JS-DevTools/npm-publish@v3
-          with:
-            token: ${{ secrets.NPM_TOKEN }}
+        - run: npx lerna publish --yes --no-private
+        # - uses: JS-DevTools/npm-publish@v3
+        #   with:
+        #     token: ${{ secrets.NPM_TOKEN }}
 
