--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,14 +6,27 @@ jobs:
     publish:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
           with:
             node-version: "20"
-        - run: npm ci
-        - run: npx lerna run build
-        - run: npx lerna run test
-        - run: npx lerna publish --yes --no-private
+        
+        - name: Install dependencies
+          run: npm ci
+
+        - name: Build
+          run: npx lerna run build
+       
+        - name: Test 
+          run: npx lerna run test
+
+        - name: Publish
+          env: 
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          run: npx lerna publish --yes --no-private
         # - uses: JS-DevTools/npm-publish@v3
         #   with:
         #     token: ${{ secrets.NPM_TOKEN }}
