--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
         - name: Publish
           env: 
             NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          run: npx lerna publish --yes --no-private
+          run: npx lerna publish --no-private from-package
         # - uses: JS-DevTools/npm-publish@v3
         #   with:
         #     token: ${{ secrets.NPM_TOKEN }}
