--- a/packages/csv2xbrl-cli/package.json
+++ b/packages/csv2xbrl-cli/package.json
@@ -2,14 +2,17 @@
     "name": "csv2xbrl-cli",
     "version": "0.3.2",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
+    "bin": {
+        "csv2xbrl": "dist/index.js"
+    },
     "scripts": {
         "test": "echo \"No tests implemented\"",
         "build": "tsup src/index.ts --clean --minify"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "devDependencies": {
         "@commander-js/extra-typings": "^12.0.1",
         "@types/node": "^20.12.7",
