--- a/packages/csv2xbrl-cli/package.json
+++ b/packages/csv2xbrl-cli/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "dist/index.js",
     "bin": {
-        "csv2xbrl": "dist/index.js"
+        "csv2xbrl": "./dist/index.js"
     },
     "scripts": {
         "test": "echo \"No tests implemented\"",
