Removed bin entry from library package

--- a/packages/csv2xbrl/package.json
+++ b/packages/csv2xbrl/package.json
@@ -25,15 +25,11 @@
         "taxpackages": "cd testdata && zip -r sample-taxonomy.zip sample-taxonomy/ && zip -r xbrl-org.zip xbrl-org && zip -r eurofiling.zip eurofiling",
         "samples": "csv2xbrl -z testdata/sample-taxonomy.zip,testdata/xbrl-org.zip testdata/xbrl-csv-tutorial/*.json"
     },
-    "bin": {
-        "csv2xbrl": "dist/index.js"
-    },
     "keywords": [
         "xBRL",
         "CSV",
         "xBRL-CSV",
-        "xBRL-XML",
-        "conversion"
+        "xBRL-XML"
     ],
     "author": "Víctor Morilla",
     "license": "MIT",
