--- a/packages/csv2xbrl/package.json
+++ b/packages/csv2xbrl/package.json
@@ -23,7 +23,7 @@
         "test": "jest",
         "profile": "node -r ts-node/register --prof src/index.ts",
         "taxpackages": "cd testdata && zip -r sample-taxonomy.zip sample-taxonomy/ && zip -r xbrl-org.zip xbrl-org && zip -r eurofiling.zip eurofiling",
-        "samples": "csv2xbrl -p testdata/sample-taxonomy.zip,testdata/xbrl-org.zip testdata/xbrl-csv-tutorial/*.json"
+        "samples": "csv2xbrl -p testdata/sample-taxonomy.zip testdata/xbrl-org.zip -j testdata/xbrl-csv-tutorial/*.json"
     },
     "keywords": [
         "xBRL",
@@ -38,7 +38,6 @@
         "@types/luxon": "^3.4.2",
         "@types/node": "^20.11.30",
         "@types/xmldom": "^0.1.34",
-        "@types/yargs": "^17.0.32",
         "@types/yauzl": "^2.10.3",
         "@typescript-eslint/eslint-plugin": "^7.8.0",
         "@typescript-eslint/parser": "^7.8.0",
@@ -57,7 +56,6 @@
         "strip-bom-stream": "^5.0.0",
         "xmldom": "^0.6.0",
         "xpath": "^0.0.34",
-        "yargs": "^17.7.2",
         "yauzl": "^3.1.2"
     }
 }
