--- a/packages/csv2xbrl-cli/package.json
+++ b/packages/csv2xbrl-cli/package.json
@@ -1,7 +1,12 @@
 {
     "name": "csv2xbrl-cli",
     "version": "0.3.5",
-    "description": "",
+    "description": "A command-line tool to transform xBRL-CSV files into xBRL-XML instance documents",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/vmorilla/csv2xbrl.git"
+    },
+    "homepage": "https://github.com/vmorilla/csv2xbrl/tree/master/packages/csv2xbrl-cli",
     "main": "dist/index.js",
     "bin": {
         "csv2xbrl": "./dist/index.js"
