--- a/packages/csv2xbrl-cli/package.json
+++ b/packages/csv2xbrl-cli/package.json
@@ -15,8 +15,13 @@
         "test": "echo \"No tests implemented\"",
         "build": "tsup src/index.ts --clean"
     },
-    "keywords": [],
-    "author": "",
+    "keywords": [
+        "xBRL",
+        "CSV",
+        "xBRL-CSV",
+        "xBRL-XML"
+    ],
+    "author": "Víctor Morilla",
     "license": "MIT",
     "devDependencies": {
         "@commander-js/extra-typings": "^12.0.1",
